@@ -1,3 +1,4 @@
+[2018-06-04 22:50:50 +0200]  Small fixes in advanced                                                    karasu      {f0ca1fe9}
 [2018-06-04 22:45:32 +0200]  Fix import                                                                 karasu      {48ca94aa}
 [2018-06-04 22:22:40 +0200]  Working on making advanced module smaller (first step, moving treev..      karasu      {5c84add1}
 [2018-06-04 13:18:12 +0200]  Move partition treeview from advanced.py to partition_treeview.py (..      karasu      {bd64de3e}
